# societyofthemind

./: .gitignore  README.md  cli.py  dump.rdb  pyproject.toml
agentic-demo/: dynamic_hiring.py  test.py
app/: __init__.py  config.py  main.py
app/api/: routes.py
app/models/: classifier.py  language_models.py
app/services/: context_manager.py  query_hander.py
chatDev/: main.py  test.ipynb
hire_specialists/: hire.py  hire_2.py
scheduler/: poc.py  pyproject.toml  search.py
tests/: locustfile.py  test_api.py  test_language_models.py  test_query_handler.py
