[tool.poetry]
name = "societyofmind"
version = "0.1.0"
description = "The brain one LLM at a time"
authors = ["Adel Zaalouk"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.1"
redis = "^4.2.0"
pandas = "^1.3.0"
scikit-learn = "^1.0.0"
sentence-transformers = "^2.1.0"
transformers = "^4.12.0"
torch = "^2.3.1"
torchaudio = "^2.3.1"
torchvision = "^0.18.1"
flask-redis = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.0.0,<9.0.0"
black = "^21.9b0"
flake8 = "^4.0.1"
isort = "^5.9.3"
locust = "^2.8.3"
[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]