[tool.poetry]
name = "societyofmind"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
huggingface-hub = "^0.23.0"
psutil = "^5.9.8"
transformers = "^4.41.0"
torch = "1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
